Missing usages + list templates names are now more flexible